# master_thesis

./: .gitignore  .gitmodules  README.md  ais_info.txt  aishub_data_2021-11-23.csv
Binary/: environment.yml  train.ipynb
Dataset/: Convert_to_yolo.ipynb  yolo_dataset_parameters.yaml
Dataset/yolo/: 000155de5.txt  000194a2d.txt
HelloWorld/: CMakeLists.txt
HelloWorld/src/: Main.cpp
Old_Stuff/: README.md  Untitled.ipynb  aishub_data_2021-11-23.csv  globalWatchTest.ipynb  map.geojson  nav_status.txt  sentinelAPI_test.py
Old_Stuff/ShuffleNetV1/: filenames.csv  filenames_original.xlsx  filenames_preprocessing.ipynb  folderNames.csv  folderNames.txt
TFLite/: tflite.cpp
TFLite/HelloWorld/src/Helper/: helper.cpp
yolo_scripts/: Convert_to_yolo.ipynb  convert_to_yolo.ipynb  environment.yml  requirements.txt  yolo_dataset_parameters.yaml  yolo_inference.ipynb  yolo_training.ipynb
